--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,22 +1,23 @@
 // =================================
 //  SETTINGS FOR Visual Studio CODE
 //  Author: VictorDalosto
-//  Version: 1.1.2
+//  Version: 1.2.0
 // =================================
 
 {
     // VISUAL
     "editor.minimap.enabled": false,
-    "workbench.sideBar.location": "right",
-    "workbench.colorTheme": "Dracula",
-    "workbench.iconTheme": "material-icon-theme",
     "editor.fontFamily": " Consolas, monaco, monospace, 'Courier New'",
-    "editor.tokenColorCustomizations": {"textMateRules": [{ // Java annotation theme to override workbench.colorTheme
-    "scope": "meta.declaration.annotation.java, storage.type.annotation.java, punctuation.definition.annotation-arguments.begin.bracket.round.java, punctuation.definition.annotation-arguments.end.bracket.round.java",
-    "settings": { "foreground": "#989191", "fontStyle": "italic"
-    }}]},
-    
-    
+    "explorer.sortOrder": "filesFirst",
+    "workbench.tree.indent": 18,
+
+
+    // SECURITY
+    "explorer.confirmDragAndDrop": true,
+    "explorer.confirmDelete": true,
+    "security.workspace.trust.untrustedFiles": "open",
+
+
     // EXTENSIONS CONFIGURATIONS
     "breadcrumbs.enabled": false,
     "files.autoSave": "onFocusChange",
@@ -26,8 +27,9 @@
 
 
     // JAVA CONFIGURATIONS
-    // "java.jdt.ls.java.home": "/usr/lib/jvm/java-17-openjdk-amd64/",
-    // "spring-boot.ls.java.home": "/usr/lib/jvm/java-17-openjdk-amd64/",
+    // "spring-boot.ls.java.home": "C:/Java/jdk-18.0.2.1",
+    "java.jdt.ls.java.home": "C:\\Program Files\\Amazon Corretto\\jdk17.0.6_10",
+    "maven.terminal.useJavaHome": true,
     "java.maven.downloadSources": true,
     "java.eclipse.downloadSources": true,
     "java.inlayHints.parameterNames.enabled": "all",
@@ -36,9 +38,132 @@
     // "java.debug.settings.console": "externalTerminal",
     // "java.debug.settings.vmArgs": "-Xmx9g",
 
+    
+    // CUSTOMIZATION
+    "editor.lineNumbers": "off",
+    "workbench.sideBar.location": "right",
+    "workbench.statusBar.visible": false,
+    "workbench.tree.renderIndentGuides": "always",
+    "window.menuBarVisibility": "compact",
+    "workbench.colorTheme": "Dracula",
+    "workbench.iconTheme": "material-icon-theme",
+    
 
-    // NEW CONFIGS:
+    // VSCODE CUSTOMIZATION
+    "workbench.colorCustomizations": {
+        "editorBracketHighlight.foreground1": "#5ecfe9", // class
+        "editorBracketHighlight.foreground2": "#f0359f", // methods
+        "editorBracketHighlight.foreground3": "#f6f7f8", // others
+        "sideBar.background": "#26242c",
+        "editor.background": "#26242c",
+        "sideBar.foreground": "#fbf9f9",
+        "terminal.background": "#26242c",
+        "panel.background": "#26242c",
+        "activityBar.background": "#000000",
+    },
+
+    "editor.tokenColorCustomizations": {
+        "textMateRules": [
+
+            {   // IMPORTS, PACKAGE, 
+                "scope": "keyword.other, entity.name",
+                "settings": {
+                    "foreground": "#888886",
+                }
+            }, 
+
+            {   // ANOTTATIONS
+                "scope": "meta.declaration.annotation, storage.type.annotation, punctuation.definition.annotation.java",
+                "settings": {
+                    "foreground": "#bcb7b7",
+                    "fontStyle": "italic",
+                }
+            },
+
+            {   // CLASSES
+                "scope": "entity.name.type.class, entity.name.function.java",
+                "settings": {
+                    "foreground": "#5ecfe9",
+                    "fontStyle": "bold",
+                }
+            },
+
+            {   // METHOD OVERIDE
+                "scope": "entity.name.function",
+                "settings": {
+                    "foreground": "#50fa7b",
+                    "fontStyle": "",
+                }
+            },
+
+            {   // ACCESS MODIFIERS
+                "scope": "storage.modifier",
+                "settings": {
+                    "foreground": "#f0359f",
+                }
+            },
+
+            {   // RETURN, NEW, OPERATORS
+                "scope": "keyword.operator, keyword.control, variable.language.this, variable.language.self",
+                "settings": {
+                    "foreground": "#f0359f",
+                    // "fontStyle": "bold",
+                }
+            },
+
+            {   // using in comma and brackets , and ;
+                "scope": "punctuation.separator, punctuation.terminator",
+                "settings": {
+                    "foreground": "#ffffff",
+                    "fontStyle": "",
+                }
+            },
+
+            {   // BRACKET
+                "scope": "punctuation.definition.parenthesis, punctuation.definition.bracket",
+                "settings": {
+                    "foreground": "#ffffff",
+                    // "fontStyle": "bold",
+                }
+            },
+
+            {   // STRINGS
+                "scope": "string.quoted.double, punctuation.definition.string.begin, punctuation.definition.string.end",
+                "settings": {
+                    "foreground": "#e0e59f"
+                }
+            },
+
+            {   // REFERENCES
+                "scope": "variable.other",
+                "settings": {
+                    "foreground": "#ffffff",
+                    "fontStyle": "",
+                }
+            },
+
+            // {   // THIS KEYWORD
+            //     "scope": "variable.language.this, variable.language.self", 
+            //     "settings": {
+            //         "fontStyle": "italic",
+            //         "foreground": "#bd93f9"
+            //     }
+            // },
+            
+        ]
+    },
+
+
+    // Excluded
+    "files.exclude": {
+        ".mvn": true,
+        ".vscode": true,
+        "mvnw": true,
+        "mvnw.cmd": true,
+        "target/**": true
+    },
+    
     "settingsSync.ignoredSettings": [
-    ]
+    ],
     
 }
